--- a/EWSEditor/Properties/Resources.resx
+++ b/EWSEditor/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="StatusAnnotations_Critical_16xLG" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\statusannotations_critical_16xlg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Error" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Error_red_16x16_exp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
